==> BM4GIT/DeviceLib/Library/Raspberry/FileSystem/mfrc522.cpp <==
#include "ArduinoCore.h"
#include "mfrc522.h"

byte Rfid::PCD_ReadRegister( byte reg)
{
  union { uint16_t val; struct { uint8_t lsb; uint8_t msb; }; } data;
  data.lsb = 0x80 | (reg & 0x7E);
  data.msb = 1;
  data.val = SPI.transfer16( data.val);
  return (byte) data.msb;
}

void Rfid::PCD_ReadRegister(	byte reg, byte count, byte *values, byte rxAlign)
{
  if ( count == 0 ) return;

  byte address = 0x80 | (reg & 0x7E);		// MSB == 1 is for reading. LSB is not used in address. Datasheet section 8.1.2.3.
  byte index = 0;							// Index in values array.
  count--;								// One read is performed outside of the loop
  SPI.transfer( address);

  while ( index < count ) {
    if ( index == 0 && rxAlign ) {		// Only update bit positions rxAlign..7 in values[0]
      // Create bit mask for bit positions rxAlign..7
      byte mask = 0;
      for (byte i = rxAlign; i <= 7; i++)
        mask |= (1 << i);

      // Read value and tell that we want to read the same address again.
      byte value = SPI.transfer( address);

      // Apply mask to both current value of values[0] and the new data in value.
      values[0] = (values[index] & ~mask) | (value & mask);
    }
    else { // Normal case
      values[index] = SPI.transfer( address);
    }
    index++;
  }
  values[index] = SPI.transfer( 0);			// Read the final byte. Send 0 to stop reading.
}

void Rfid::PCD_Init()
{
  if ( digitalRead( m_rst) == LOW ) {	//The MFRC522 chip is in power down mode.
    digitalWrite( m_rst, HIGH);		// Exit power down mode. This triggers a hard reset.
    // Section 8.8.2 in the datasheet says the oscillator start-up time is the start up time of the crystal + 37,74�s. Let us be generous: 50ms.
    delay( 50);
  }
  else // Perform a soft reset
    PCD_Reset();

  // When communicating with a PICC we need a timeout if something goes wrong.
  setTimeout( 25);
	
  PCD_WriteRegister( TxASKReg, 0x40);		// Default 0x00. Force a 100 % ASK modulation independent of the ModGsPReg register setting
  PCD_WriteRegister( ModeReg, 0x3D);		// Default 0x3F. Set the preset value for the CRC coprocessor for the CalcCRC command to 0x6363 (ISO 14443-3 part 6.2.4)
  PCD_AntennaOn();						// Enable the antenna driver pins TX1 and TX2 (they were disabled by the reset)
}
